2009-03-13  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc: Fix lockf copyright to latest version.

2009-03-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (path_conv::isgood_inode): Move to be defined
	earlier.
	(get_ino_by_handle): Take additional path_conv argument, accommodate
	throughout.  Only use FileId if isgood_inode check is true.
	(fhandler_base::open_fs): Simplify setting ino due to above change.
	(readdir_get_ino): Make sure to return always a non-zero inode number.
	(fhandler_disk_file::readdir): Always open file in dir with
	FILE_OPEN_REPARSE_POINT so as not to open wrong file.
	Drop call to isgood_inode here.
	* path.cc (symlink_info::check): Call fs.update in case we're fetching
	file information from call to NtQueryDirectoryFile.

2009-03-12  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (fhandler_disk_file::lock): Don't test file open mode in
	case of flock-type locks.  Explain why.

2009-03-12  Brian Ford <Brian.Ford@FlightSafety.com>

	* gethostby_helper: Fix typos in DEBUGGING case.

2009-03-11  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Export wcscasecmp, wcsncasecmp.
	* posix.sgml: Move wcscasecmp, wcsncasecmp to SUSv4 list.
	* include/cygwin/version.h: Bump API minor number.

2009-03-11  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Export wscanf, fwscanf, swscanf, vwscanf, vfwscanf,
	vswscanf.
	* posix.sgml: Move fwscanf, swscanf, vwscanf, vfwscanf, vswscanf
	to SUSv4 list.
	* include/cygwin/version.h: Bump API minor number.

2009-03-09  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_socket::wait_for_events): Take additional
	parameter "dontwait".
	* fhandler_socket.cc (fhandler_socket::wait_for_events): Act as if the
	socket is non-blocking if dontwait is true.
	(fhandler_socket::recv_internal): Use incoming MSG_DONTWAIT flag to
	set the wait_for_events dontwait parameter.
	(fhandler_socket::send_internal): Ditto.  Optimize code slightly.